[package]
name = "us-state-info"
version = "0.2.4"
authors = ["Calvin Brown <cab025@protonmail.com>", "Isaac Duarte <isaac.duarte@live.com>"]
edition = "2018"
repository = "https://github.com/Isaac-Duarte/us-state-info-rs"
description = "A Fork of a Rust implementation of the state names & abbreviations for the USA"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde1 = ["serde"]
serde_abbreviation = ["serde"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }